[package]
name = "rust-kafka-ci"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rdkafka = { version="0.36.2", features = ["ssl-vendored", "cmake-build"] }
actix = "0.13.1"
chrono = "0.4.31"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies.tokio]
version = "1"
features = ["full"]

